# b1_description

./: CMakeLists.txt  README.md  package.xml
config/gait/: gait.yaml
config/joints/: joints.yaml
config/links/: links.yaml
config/ros_control/: ros_control.yaml
launch/: b1_rviz.launch  b1_rviz.launch.py  b1_rviz_champ.launch.py  check_joint.rviz  upload.launch  upload.launch.py
rviz/: robot_description.rviz  ros2_champ_robot_description.rviz  ros2_check_joint.rviz  ros2_mapping.rviz  ros2_robot_description.rviz
urdf/: robot.urdf
xacro/: gazebo.xacro  leg.xacro  materials.xacro  robot.xacro  sensors.xacro
xacro/camera/: realsense_d435.gazebo.xacro  realsense_d435.urdf.xacro
