<?xml version="1.0"?>
<package format="3">
    <name>b1_description</name>
    <version>0.0.0</version>
    <description>The b1_description package</description>

    <maintainer email="federico.rollo@leonardo.com">Federico Rollo</maintainer>
    <license>BSD</license>
    
    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

    <depend>sensors_description</depend>

    <export>                               
        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type> 
    </export> 

</package>
